--- a/Modacity/Modacity/ViewController/Details/PlaylistStatsView.xib
+++ b/Modacity/Modacity/ViewController/Details/PlaylistStatsView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -57,7 +57,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="504" height="165"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_details_timer" translatesAutoresizingMaskIntoConstraints="NO" id="ZTq-bI-xDr">
-                                            <rect key="frame" x="233" y="20" width="37" height="37"/>
+                                            <rect key="frame" x="233.5" y="20" width="37" height="37"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="blE-A6-DGi">
                                             <rect key="frame" x="237.5" y="62" width="29" height="57.5"/>
@@ -253,7 +253,7 @@
                                             <rect key="frame" x="10" y="10" width="484" height="250"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcw-Ab-gcx">
-                                                    <rect key="frame" x="0.0" y="9" width="44" height="36"/>
+                                                    <rect key="frame" x="0.0" y="9.5" width="44" height="36"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="36" id="eX8-3y-ztd"/>
                                                         <constraint firstAttribute="width" constant="44" id="nDg-RG-vow"/>
@@ -270,7 +270,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGY-oV-Ol1">
-                                                    <rect key="frame" x="440" y="9" width="44" height="36"/>
+                                                    <rect key="frame" x="440" y="9.5" width="44" height="36"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="44" id="oZO-QZ-vjW"/>
                                                         <constraint firstAttribute="height" constant="36" id="p7f-fb-t2C"/>
@@ -326,8 +326,8 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CeE-At-dXK">
                                             <rect key="frame" x="10" y="10" width="484" height="116"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AVAERAGE SESSION DURATION" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfo-zo-aG3">
-                                                    <rect key="frame" x="161.5" y="20" width="162" height="12"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AVERAGE SESSION DURATION" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfo-zo-aG3">
+                                                    <rect key="frame" x="164.5" y="20" width="155" height="12"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                                     <color key="textColor" red="0.53333333333333333" green="0.50196078431372548" blue="0.88235294117647056" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -369,7 +369,7 @@
                                     <rect key="frame" x="0.0" y="699" width="504" height="250"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iLM-f1-wJD">
-                                            <rect key="frame" x="0.0" y="-1" width="36" height="36"/>
+                                            <rect key="frame" x="0.0" y="-0.5" width="36" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="36" id="4WY-E1-oyC"/>
                                                 <constraint firstAttribute="width" constant="36" id="fUv-jU-RhJ"/>
@@ -386,7 +386,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="foM-JF-wA0">
-                                            <rect key="frame" x="468" y="-1" width="36" height="36"/>
+                                            <rect key="frame" x="468" y="-0.5" width="36" height="36"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="36" id="Shs-TT-jHl"/>
                                                 <constraint firstAttribute="width" constant="36" id="d42-Q9-bEP"/>
